[gd_scene load_steps=8 format=3 uid="uid://dsxuiln7cv3g5"]

[ext_resource type="Script" path="res://Scripts/user_interface.gd" id="1_kdjpr"]
[ext_resource type="FontFile" uid="uid://cy5s5ux4tfum3" path="res://Resources/Fonts/PixelifySans-SemiBold.ttf" id="2_2vhvn"]
[ext_resource type="Texture2D" uid="uid://bkflyd7j00848" path="res://Art/Sprites/TowerSprites/LineTurret/LineTurretIdle.png" id="3_x46cl"]
[ext_resource type="Texture2D" uid="uid://b01ya1e2lo5ak" path="res://Art/Sprites/TowerSprites/CrowdTurret/CrowdTurretIdle.png" id="4_tagnd"]
[ext_resource type="Texture2D" uid="uid://8ub0ysms0t5e" path="res://Art/Sprites/TowerSprites/PrecTurret/PrecTurretIdle.png" id="5_30kkg"]
[ext_resource type="Texture2D" uid="uid://bsbyvln636mu6" path="res://Art/Sprites/TowerSprites/ShieldGen/ShieldGenIdle4.png" id="6_1auof"]
[ext_resource type="Texture2D" uid="uid://cj360l8ixl32y" path="res://Art/Sprites/TowerSprites/RallyUnit/RallyUnitIdle.png" id="7_hwyvx"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kdjpr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -85.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="TowerSelector" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="LineTurret" type="Button" parent="TowerSelector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2vhvn")
theme_override_font_sizes/font_size = 10
text = "Line
Turret"
icon = ExtResource("3_x46cl")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="CrowdTurret" type="Button" parent="TowerSelector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2vhvn")
theme_override_font_sizes/font_size = 10
text = "Crowd
Turret"
icon = ExtResource("4_tagnd")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="PrecTurret" type="Button" parent="TowerSelector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2vhvn")
theme_override_font_sizes/font_size = 10
text = "Precision
Turret"
icon = ExtResource("5_30kkg")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ShieldGen" type="Button" parent="TowerSelector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2vhvn")
theme_override_font_sizes/font_size = 10
text = "Shield
Generator"
icon = ExtResource("6_1auof")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="RallyUnit" type="Button" parent="TowerSelector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2vhvn")
theme_override_font_sizes/font_size = 10
text = "Line
Turret"
icon = ExtResource("7_hwyvx")
icon_alignment = 1
vertical_icon_alignment = 0

[connection signal="button_down" from="TowerSelector/LineTurret" to="." method="_on_line_turret_button_down"]
[connection signal="button_down" from="TowerSelector/CrowdTurret" to="." method="_on_crowd_turret_button_down"]
[connection signal="button_down" from="TowerSelector/PrecTurret" to="." method="_on_prec_turret_button_down"]
[connection signal="button_down" from="TowerSelector/ShieldGen" to="." method="_on_shield_gen_button_down"]
[connection signal="button_down" from="TowerSelector/RallyUnit" to="." method="_on_rally_unit_button_down"]
